--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     name: Build ${{ matrix.arch }}
     runs-on: arc-runner-ha-addon
+    container:
+      image: debian:bookworm-slim
     permissions:
       contents: read
       packages: write
@@ -36,25 +38,23 @@ jobs:
             base: ghcr.io/home-assistant/armv7-base-python:3.12
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Install tools
+        run: apt-get update && apt-get install -y git buildah ca-certificates nodejs npm
 
-      - name: Install buildah (if not present)
-        run: |
-          if ! command -v buildah &>/dev/null; then
-            sudo apt-get update -qq && sudo apt-get install -y -qq buildah
-          fi
+      - uses: actions/checkout@v4
 
       - name: Login to ghcr.io
         if: github.event_name != 'pull_request'
         run: |
-          buildah login \
+          buildah --storage-driver vfs login \
             --username "${{ github.actor }}" \
             --password "${{ secrets.GITHUB_TOKEN }}" \
             ghcr.io
 
       - name: Build
         run: |
-          buildah build \
+          buildah --storage-driver vfs build \
+            --isolation chroot \
             --platform "${{ matrix.platform }}" \
             --build-arg BUILD_FROM="${{ matrix.base }}" \
             --tag "${{ env.IMAGE }}:${{ matrix.arch }}-${{ github.sha }}" \
@@ -62,11 +62,15 @@ jobs:
 
       - name: Push interim arch tag
         if: github.event_name != 'pull_request'
-        run: buildah push "${{ env.IMAGE }}:${{ matrix.arch }}-${{ github.sha }}"
+        run: |
+          buildah --storage-driver vfs push \
+            "${{ env.IMAGE }}:${{ matrix.arch }}-${{ github.sha }}"
 
   manifest:
     name: Create multi-arch manifest
     runs-on: arc-runner-ha-addon
+    container:
+      image: debian:bookworm-slim
     needs: build
     if: github.event_name == 'release'
     permissions:
@@ -74,15 +78,12 @@ jobs:
       packages: write
 
     steps:
-      - name: Install buildah (if not present)
-        run: |
-          if ! command -v buildah &>/dev/null; then
-            sudo apt-get update -qq && sudo apt-get install -y -qq buildah
-          fi
+      - name: Install tools
+        run: apt-get update && apt-get install -y buildah ca-certificates
 
       - name: Login to ghcr.io
         run: |
-          buildah login \
+          buildah --storage-driver vfs login \
             --username "${{ github.actor }}" \
             --password "${{ secrets.GITHUB_TOKEN }}" \
             ghcr.io
@@ -92,12 +93,12 @@ jobs:
           VERSION="${{ github.event.release.tag_name }}"
 
           for TAG in "$VERSION" latest; do
-            buildah manifest create "${{ env.IMAGE }}:${TAG}"
+            buildah --storage-driver vfs manifest create "${{ env.IMAGE }}:${TAG}"
             for ARCH in aarch64 amd64 armv7; do
-              buildah manifest add "${{ env.IMAGE }}:${TAG}" \
+              buildah --storage-driver vfs manifest add "${{ env.IMAGE }}:${TAG}" \
                 "${{ env.IMAGE }}:${ARCH}-${{ github.sha }}"
             done
-            buildah manifest push --all "${{ env.IMAGE }}:${TAG}" \
+            buildah --storage-driver vfs manifest push --all "${{ env.IMAGE }}:${TAG}" \
               "docker://${{ env.IMAGE }}:${TAG}"
           done
 
