Fix trigger: include workflow file in path filter, add workflow_dispatch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,12 @@ on:
     branches: [main]
     paths:
       - 'hle/**'
+      - '.github/workflows/build.yml'
   pull_request:
     paths:
       - 'hle/**'
+      - '.github/workflows/build.yml'
+  workflow_dispatch:
 
 env:
   IMAGE: ghcr.io/hle-world/ha-addon
