Refactor: multi-stage Dockerfile, drop requirements.txt
- Stage 1 (node:22-alpine): npm ci + build, discarded after
- Stage 2 (HA base): only supervisor, jq, pip deps, built static files
- No nodejs/npm in the final image
- Remove redundant requirements.txt, deps now inline in Dockerfile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
 
     steps:
       - name: Install tools
-        run: apt-get update && apt-get install -y git buildah ca-certificates nodejs npm
+        run: apt-get update && apt-get install -y git buildah ca-certificates
 
       - uses: actions/checkout@v4
 
