--- a/hle/Dockerfile
+++ b/hle/Dockerfile
@@ -1,34 +1,28 @@
+# Stage 1: build the React frontend
+FROM node:22-alpine AS frontend
+WORKDIR /build
+COPY frontend/package.json frontend/package-lock.json ./
+RUN npm ci
+COPY frontend/ ./
+RUN npm run build
+
+# Stage 2: final image
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Install system dependencies
-RUN apk add --no-cache \
-    supervisor \
-    nodejs \
-    npm \
-    jq
+RUN apk add --no-cache supervisor jq \
+    && pip3 install --no-cache-dir \
+        hle-client \
+        fastapi \
+        uvicorn \
+        supervisor \
+        httpx
 
-# Install Python backend dependencies
-COPY backend/requirements.txt /app/backend/requirements.txt
-RUN pip3 install --no-cache-dir -r /app/backend/requirements.txt
-
-# Build frontend
-COPY frontend/ /app/frontend/
-RUN cd /app/frontend \
-    && npm ci \
-    && npm run build \
-    && mv dist /app/backend/static \
-    && rm -rf /app/frontend
-
-# Copy backend
 COPY backend/ /app/backend/
-
-# Copy supervisor base config and entrypoint
+COPY --from=frontend /build/dist /app/backend/static
 COPY supervisord.conf /etc/supervisord.conf
 COPY run.sh /run.sh
-RUN chmod +x /run.sh
-
-# Supervisor will write dynamic tunnel configs here
-RUN mkdir -p /etc/supervisor/conf.d /data/logs
+RUN chmod +x /run.sh \
+    && mkdir -p /etc/supervisor/conf.d /data/logs
 
 CMD ["/run.sh"]
