--- a/hle/Dockerfile
+++ b/hle/Dockerfile
@@ -1,3 +1,6 @@
+# ARG declared globally so it can be used in the FROM of stage 2
+ARG BUILD_FROM
+
 # Stage 1: build the React frontend
 FROM node:22-alpine AS frontend
 WORKDIR /build
@@ -7,7 +10,6 @@ COPY frontend/ ./
 RUN npm run build
 
 # Stage 2: final image
-ARG BUILD_FROM
 FROM $BUILD_FROM
 
 RUN apk add --no-cache supervisor jq \
