--- a/hle/build.yaml
+++ b/hle/build.yaml
@@ -1,5 +1,5 @@
 build_from:
-  aarch64: ghcr.io/home-assistant/aarch64-base-python:3.12
-  amd64: ghcr.io/home-assistant/amd64-base-python:3.12
-  armv7: ghcr.io/home-assistant/armv7-base-python:3.12
+  aarch64: ghcr.io/home-assistant/aarch64-base-python:3.12-alpine3.18
+  amd64: ghcr.io/home-assistant/amd64-base-python:3.12-alpine3.18
+  armv7: ghcr.io/home-assistant/armv7-base-python:3.12-alpine3.18
 squash: false
