--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
 
   build:
     name: Build ${{ matrix.arch }}
-    runs-on: arc-runner-ha-addon
+    runs-on: ${{ matrix.runner }}
     container:
       image: debian:bookworm-slim
     needs: frontend
@@ -55,12 +55,15 @@ jobs:
       matrix:
         include:
           - arch: aarch64
+            runner: arc-runner-ha-addon
             platform: linux/arm64
             base: ghcr.io/home-assistant/aarch64-base-python:3.12-alpine3.18
           - arch: amd64
+            runner: ubuntu-latest
             platform: linux/amd64
             base: ghcr.io/home-assistant/amd64-base-python:3.12-alpine3.18
           - arch: armv7
+            runner: arc-runner-ha-addon
             platform: linux/arm/v7
             base: ghcr.io/home-assistant/armv7-base-python:3.12-alpine3.18
 
