Reduce image size: drop supervisord, strip .dist-info, simplify run.sh
- Replace supervisord + XML-RPC with direct asyncio.create_subprocess_exec
  process management; eliminates `apk add supervisor jq` (~10 MB)
- Strip .dist-info and __pycache__ after pip install (~20-40 MB)
- Remove explicit httpx install (already transitive via hle-client)
- Delete supervisor_client.py, supervisord.conf, restore_tunnels.py
- Fold startup tunnel restore into FastAPI lifespan event
- run.sh now execs uvicorn directly instead of supervisord

--- a/hle/Dockerfile
+++ b/hle/Dockerfile
@@ -1,18 +1,16 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-RUN apk add --no-cache supervisor jq \
-    && pip3 install --no-cache-dir \
+RUN pip3 install --no-cache-dir \
         hle-client \
         fastapi \
         uvicorn \
-        httpx
+    && find /usr/lib/python3* /usr/local/lib/python3* -type d -name "*.dist-info" -exec rm -rf {} + 2>/dev/null; \
+       find /usr/lib/python3* /usr/local/lib/python3* -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null; true
 
 COPY backend/ /app/backend/
 COPY static/ /app/backend/static
-COPY supervisord.conf /etc/supervisord.conf
 COPY run.sh /run.sh
-RUN chmod +x /run.sh \
-    && mkdir -p /etc/supervisor/conf.d /data/logs
+RUN chmod +x /run.sh && mkdir -p /data/logs
 
 CMD ["/run.sh"]
