--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -28,7 +28,9 @@ jobs:
 
       - name: Create release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Must use a PAT here — GITHUB_TOKEN-created releases do not cascade
+          # to trigger other workflows (GitHub anti-loop protection).
+          GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           VERSION: ${{ steps.ver.outputs.version }}
         run: |
           gh release create "v${VERSION}" \
