UX overhaul: collapsible sections, auto HA config, restart banner
- Remove nav tabs: single page with collapsible Settings + Tunnels sections
- Settings auto-expands when no API key is set; badge warns "API key required"
- Tunnels section expanded by default, shows count badge
- Remove API key from HA addon config tab (options/schema removed from config.yaml)
  so users aren't confused about where to enter it
- Settings: HA Proxy Settings sub-section auto-detects status of
  configuration.yaml and offers one-click "Apply to configuration.yaml"
  (appends http block) or shows manual instructions if http: section exists
- Restart banner appears after auto-applying config; "Restart HA Now" button
  calls POST /supervisor/core/restart via Supervisor API
- Documentation collapsible under Tunnels: covers HA setup, SSO vs Open,
  self-signed certs
- Backend: /api/ha-setup/status, /api/ha-setup/apply, /api/ha-setup/restart
- config:rw map added so addon can write /config/configuration.yaml

--- a/hle/config.yaml
+++ b/hle/config.yaml
@@ -18,13 +18,9 @@ ingress_port: 8099
 panel_icon: mdi:tunnel
 panel_title: HLE
 
-options:
-  api_key: ""
-
-schema:
-  api_key: password
-
 map:
   - data
+  - config:rw
+  - config:rw
 
 image: "ghcr.io/hle-world/ha-addon"
