--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,8 +1,10 @@
 name: Auto-release on sync PR merge
 
 # Triggered when a sync/hle-client-v* PR is merged into main.
-# Reads the version from hle/config.yaml and creates a GitHub release,
-# which in turn triggers the Docker build workflow.
+# Creates a GitHub PRE-RELEASE, which triggers the Docker build workflow.
+# The build workflow bumps config.yaml and promotes to a full release only
+# after the image is confirmed pushed — preventing HA Supervisor from seeing
+# the new version before the image is available.
 
 on:
   pull_request:
@@ -11,7 +13,7 @@ on:
 
 jobs:
   release:
-    name: Create release
+    name: Create pre-release
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'sync/hle-client-v')
     runs-on: ubuntu-latest
     permissions:
@@ -20,13 +22,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Read version from config.yaml
+      - name: Read target version from Dockerfile
         id: ver
         run: |
-          VERSION=$(grep '^version:' hle/config.yaml | sed 's/version: *"\(.*\)"/\1/')
+          VERSION=$(grep 'hle-client==' hle/Dockerfile | sed 's/.*hle-client==\([0-9][0-9.]*\).*/\1/')
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
-      - name: Create release
+      - name: Create pre-release
         env:
           # Must use a PAT here — GITHUB_TOKEN-created releases do not cascade
           # to trigger other workflows (GitHub anti-loop protection).
@@ -34,5 +36,6 @@ jobs:
           VERSION: ${{ steps.ver.outputs.version }}
         run: |
           gh release create "v${VERSION}" \
+            --prerelease \
             --title "v${VERSION}" \
             --notes "Synced to hle-client v${VERSION}. See [hle-client release notes](https://github.com/hle-world/hle-client/releases/tag/v${VERSION}) for details."
