--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build & Publish Add-on
 
 on:
   release:
-    types: [published]
+    types: [published, prereleased]
   workflow_dispatch:
 
 env:
@@ -156,3 +156,42 @@ jobs:
           VERSION="${VERSION#v}"
           echo "### Published \`ghcr.io/hle-world/ha-addon:${VERSION}\`" >> "$GITHUB_STEP_SUMMARY"
           echo "Multi-arch manifest covering: aarch64, amd64, armv7" >> "$GITHUB_STEP_SUMMARY"
+
+  # Bump config.yaml and promote the release to non-pre-release only AFTER the
+  # image is confirmed pushed. This prevents HA Supervisor from offering an update
+  # before the Docker image is actually available.
+  publish:
+    name: Bump config version & publish release
+    runs-on: ubuntu-latest
+    needs: manifest
+    if: github.event_name == 'release'
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # Use PAT so the version bump commit triggers downstream workflows
+          # (GITHUB_TOKEN commits are silently ignored by Actions).
+          token: ${{ secrets.RELEASE_TOKEN }}
+          ref: main
+
+      - name: Bump config.yaml version
+        env:
+          VERSION: ${{ github.event.release.tag_name }}
+        run: |
+          VERSION="${VERSION#v}"
+          sed -i "s/^version: .*/version: \"${VERSION}\"/" hle/config.yaml
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add hle/config.yaml
+          # No-op if version was already set (e.g. re-running the workflow).
+          git diff --staged --quiet || git commit -m "Bump version to ${VERSION} [skip ci]"
+          git push
+
+      - name: Promote to full release
+        env:
+          GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          VERSION: ${{ github.event.release.tag_name }}
+        run: |
+          gh release edit "${VERSION}" --prerelease=false
