--- a/.github/workflows/sync-release.yml
+++ b/.github/workflows/sync-release.yml
@@ -3,10 +3,9 @@ name: Sync release with hle-client
 # Triggered automatically by hle-client's publish workflow via repository_dispatch,
 # or manually via workflow_dispatch for testing.
 #
-# Creates a PR on main that bumps the version pin and links to the hle-client
-# release notes. Review the PR, add any UI/backend work needed for new features,
-# then merge. After merging, create a release manually (Actions → Build → Run workflow,
-# or gh release create vX.Y.Z) to trigger the Docker build.
+# Creates a PR on main that bumps the Dockerfile pin only. The config.yaml version
+# is bumped by the build workflow AFTER the Docker image is confirmed pushed —
+# this prevents HA Supervisor from offering an update before the image is ready.
 
 on:
   repository_dispatch:
@@ -41,23 +40,28 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout -b "sync/hle-client-v${{ steps.ver.outputs.version }}"
 
-      - name: Bump versions
+      - name: Bump Dockerfile pin
+        env:
+          VERSION: ${{ steps.ver.outputs.version }}
         run: |
-          VERSION="${{ steps.ver.outputs.version }}"
-          sed -i "s/^version: .*/version: \"${VERSION}\"/" hle/config.yaml
+          # Only bump the Dockerfile pin — config.yaml version is bumped by the
+          # build workflow AFTER the Docker image is confirmed pushed, so HA
+          # Supervisor never sees a version that doesn't have a built image yet.
           sed -i "s/hle-client==[0-9][0-9.]*/hle-client==${VERSION}/" hle/Dockerfile
 
       - name: Commit
+        env:
+          VERSION: ${{ steps.ver.outputs.version }}
         run: |
-          git add hle/config.yaml hle/Dockerfile
-          git commit -m "Sync to hle-client v${{ steps.ver.outputs.version }}"
-          git push origin "sync/hle-client-v${{ steps.ver.outputs.version }}"
+          git add hle/Dockerfile
+          git commit -m "Sync to hle-client v${VERSION}"
+          git push origin "sync/hle-client-v${VERSION}"
 
       - name: Open PR
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ steps.ver.outputs.version }}
         run: |
-          VERSION="${{ steps.ver.outputs.version }}"
           gh pr create \
             --base main \
             --head "sync/hle-client-v${VERSION}" \
@@ -71,12 +75,13 @@ jobs:
           - [ ] Check for new CLI flags on \`hle expose\` → update \`tunnel_manager.py\` if needed
           - [ ] Test the add-on with the new client version
 
-          **After merging:** create a release manually to trigger the Docker build:
+          **After merging:** create a **pre-release** to trigger the Docker build:
           \`\`\`
-          gh release create v${VERSION} --title "v${VERSION}" --notes "..."
+          gh release create v${VERSION} --prerelease --title "v${VERSION}" --notes "..."
           \`\`\`
+          The build workflow will bump \`config.yaml\` and promote to full release automatically.
 
           ---
-          *Automated bump: \`hle/config.yaml\` → \`${VERSION}\`, \`hle/Dockerfile\` → \`hle-client==${VERSION}\`*
+          *Automated bump: \`hle/Dockerfile\` → \`hle-client==${VERSION}\`*
           BODY
           )"
