Fix double build trigger: only fire on prereleased, not published

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build & Publish Add-on
 
 on:
   release:
-    types: [published, prereleased]
+    types: [prereleased]
   workflow_dispatch:
 
 env:
